[project]
name = "systemair-product-api-fastapi"
version = "0.1.0"
description = "Modernized FastAPI service for the Systemair product domain"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pyodbc>=5.0",
    "elasticsearch[async]>=8.13",
    "httpx>=0.27",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.3",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

